--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "chokidar-cli": "^2.0.0",
+    "classnames": "^2.2.6",
     "jquery": "3.4.1",
     "node-sass": "^4.12.0",
     "node-sass-chokidar": "^1.3.5",
@@ -36,9 +37,12 @@
     "postcss-cli": "^6.1.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-feather": "^2.0.3",
     "react-redux": "7.1.0",
     "react-redux-toastr": "7.5.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1",
     "redux": "4.0.4",
     "typescript": "3.5.3"
   },
